--- a/src/scss/components/_product-popup.scss
+++ b/src/scss/components/_product-popup.scss
@@ -1,5 +1,6 @@
 .product-popup {
 	max-width: 805px;
+	max-height: 512px;
 	padding: 25px 25px 20px;
 	@include media('<tablet') {
         	max-width: 600px;
@@ -13,6 +14,10 @@
 		margin-bottom: 30px;
 		@include media('<tablet') {
 			font-size: 14px;
+			margin-bottom: 20px;
+		}
+		@include media('<phone') {
+			font-size: 12px;
 			margin-bottom: 20px;
 		}
 	}
@@ -104,7 +109,10 @@
 			line-height: 40px;
 		}
 		@include media('<phone') {
-			padding: 0 5px 0 25px;
+			width: 20%;
+			padding: 0 2% 0 6%;
+			font-size: 11px;
+			line-height: 30px;
 		}
 		&:before {
 			content: " ";
@@ -121,6 +129,10 @@
 				width: 18px;
 				height: 18px;
 			}
+			@include media('<phone') {
+				width: 12px;
+				height: 12px;
+			}
 		}
 	}
 	.text-field {
@@ -134,6 +146,10 @@
 			font-size: 16px;
 			padding: 0 5px 0 10px;
 		}
+		@include media('<phone') {
+			font-size: 12px;
+			padding: 0 5px;
+		}
 	}
 	.icons-field {
 		display: flex;
@@ -144,11 +160,19 @@
 		@include media('<tablet') {
 			width: 50%;
 		}
+		@include media('<tablet') {
+			width: 48%;
+		}
 		i {
 			font-size: 40px;
 			margin-right: 18px;
 			@include media('<tablet') {
 				font-size: 25px;
+				margin-right: 12px;
+			}
+			@include media('<phone') {
+				font-size: 20px;
+				margin-right: 6px;
 			}
 		}
 		.img-holder {
@@ -161,6 +185,11 @@
 				width: 30px;
 				height: 30px;
 				margin-right: 12px;
+			}
+			@include media('<phone') {
+				width: 25px;
+				height: 25px;
+				margin-right: 6px;
 			}
 			img {
 				display: block;
@@ -179,6 +208,9 @@
 			border-radius: 5px;
 			@include media('<tablet') {
 				line-height: 30px;
+			}
+			@include media('<phone') {
+				line-height: 24px;
 			}
 		}
 		p {
