--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -14,5 +14,5 @@
 @import 'thumb-section';
 @import 'two-column-section';
 @import 'logos-section';
-
-
+@import 'nos-gammes';
+@import 'marques-tabs';
