--- a/src/scss/components/_default-section.scss
+++ b/src/scss/components/_default-section.scss
@@ -22,6 +22,18 @@
         padding-bottom: 45px;
         max-width: 800px;
         line-height: 1.2;
+        @include media('<desktop') {
+            font-size: 18px;    
+            padding-bottom: 30px;   
+        }   
+        @include media('<tablet') {
+            font-size: 16px;    
+            padding-bottom: 15px;   
+        }    
+        @include media('<phone') {
+            font-size: 15px;  
+            padding-bottom: 10px;     
+        } 
     }
   
     &.gray{
