--- a/src/scss/components/_product-popup.scss
+++ b/src/scss/components/_product-popup.scss
@@ -97,6 +97,9 @@
 		margin-bottom: 10px;
 	}
 	.favoris-link {
+		@include animate(background-color, .3s)
+		display: flex;
+		align-items: center;
 		width: 12%;
 		padding: 0 5px 0 30px; 
 		background-color: $red;
@@ -134,6 +137,9 @@
 				height: 12px;
 			}
 		}
+		&:hover {
+			background-color: $red-dark;
+		}
 	}
 	.text-field {
 		padding: 0 5px 0 20px;
@@ -159,9 +165,6 @@
 		background: $gray-light;
 		@include media('<tablet') {
 			width: 50%;
-		}
-		@include media('<tablet') {
-			width: 48%;
 		}
 		i {
 			font-size: 40px;
@@ -204,10 +207,13 @@
 		justify-content: flex-end;
 		.btn {
 			padding: 0 18px;
+			min-width: 150px;
 			line-height: 40px;
 			border-radius: 5px;
+			text-align: center;
 			@include media('<tablet') {
 				line-height: 30px;
+				min-width: 125px;
 			}
 			@include media('<phone') {
 				line-height: 24px;
