--- a/src/scss/components/_video-banner.scss
+++ b/src/scss/components/_video-banner.scss
@@ -12,6 +12,8 @@
         position: absolute;
         left: 0;
         right: 0;
+        top:50%;
+    transform:translateY(-50%);
         &:before,&:after{display: none;}
     }
 
