--- a/src/scss/components/_thumb-section.scss
+++ b/src/scss/components/_thumb-section.scss
@@ -1,9 +1,10 @@
 .thumb-section {
-    background-image: url('../images/thumb-bg.jpg');
-    background-size: cover;
-    background-position: 50% 50%;
+
+
+    background-position: 50% center;
     padding: 58px 0 7px;
-    background-attachment: fixed;
+    background-size:    135%;
+
     @include media('<desktop') {
         padding: 30px 0
     }   
