--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -17,3 +17,5 @@
 @import 'nos-gammes';
 @import 'marques-tabs';
 @import 'marques-interactive';
+@import 'accelerator-block';
+@import 'products-filter';
