--- a/src/fonts/icons/style.css
+++ b/src/fonts/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?qdhl5t');
-  src:  url('fonts/icomoon.eot?qdhl5t#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?qdhl5t') format('truetype'),
-    url('fonts/icomoon.woff?qdhl5t') format('woff'),
-    url('fonts/icomoon.svg?qdhl5t#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?qzz8xu');
+  src:  url('fonts/icomoon.eot?qzz8xu#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?qzz8xu') format('truetype'),
+    url('fonts/icomoon.woff?qzz8xu') format('woff'),
+    url('fonts/icomoon.svg?qzz8xu#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,22 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-paper-plane:before {
+  content: "\e900";
+}
+.icon-herbal-spa-treatment-leaves:before {
+  content: "\e91e";
+}
+.icon-arrow-right:before {
+  content: "\ea3c";
+}
+.icon-arrow-left:before {
+  content: "\ea40";
+}
+.icon-search:before {
+  content: "\e91d";
+  color: #e30613;
+}
 .icon-thermometer-outlined-symbol-of-stroke:before {
   content: "\e91b";
 }
@@ -110,13 +126,4 @@
 }
 .icon-chevron-left:before {
   content: "\e904";
-}
-.icon-searchmagnifying-glass:before {
-  content: "\e900";
-}
-.icon-arrow-right:before {
-  content: "\ea3c";
-}
-.icon-arrow-left:before {
-  content: "\ea40";
 }
