--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,4 +1,7 @@
+$gray: #4e4e4e;
 $gray2: #999;
+$gray3: #7c7c7c;
+$gray4: #6a6a6a;
 $black: #1d1d1d;
 $dark:#262626;
 $white: #fff;
@@ -7,7 +10,11 @@ $red: #e93842;
 $red-dark:#9e2121;
 $gray: #4e4e4e;
 $gray-light: #efefef;
+$gray-light-1: #eeeeee;
+$gray-light-2: #dddddd;
+$gray-light-3: #c7c7c7;
 $pink-light: #f38f95;
+
 
 $base-font-sans-serif: 'Roboto', 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
 $base-font-serif: 'Times New Roman', 'Times', 'Baskerville', 'Georgia', serif;
