--- a/src/fonts/icons/style.css
+++ b/src/fonts/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?qzz8xu');
-  src:  url('fonts/icomoon.eot?qzz8xu#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?qzz8xu') format('truetype'),
-    url('fonts/icomoon.woff?qzz8xu') format('woff'),
-    url('fonts/icomoon.svg?qzz8xu#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?rqudbd');
+  src:  url('fonts/icomoon.eot?rqudbd#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?rqudbd') format('truetype'),
+    url('fonts/icomoon.woff?rqudbd') format('woff'),
+    url('fonts/icomoon.svg?rqudbd#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,17 +24,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-paper-plane:before {
-  content: "\e900";
-}
-.icon-herbal-spa-treatment-leaves:before {
-  content: "\e91e";
-}
-.icon-arrow-right:before {
-  content: "\ea3c";
-}
-.icon-arrow-left:before {
-  content: "\ea40";
+.icon-right:before {
+  content: "\e91f";
 }
 .icon-search:before {
   content: "\e91d";
@@ -120,6 +111,18 @@
 }
 .icon-world:before {
   content: "\e902";
+}
+.icon-paper-plane:before {
+  content: "\e900";
+}
+.icon-herbal-spa-treatment-leaves:before {
+  content: "\e91e";
+}
+.icon-arrow-right:before {
+  content: "\ea3c";
+}
+.icon-arrow-left:before {
+  content: "\ea40";
 }
 .icon-chevron-right:before {
   content: "\e903";
