--- a/src/scss/components/_marques-interactive.scss
+++ b/src/scss/components/_marques-interactive.scss
@@ -6,8 +6,7 @@
 		padding: 30px;
 	}
 	@include media('<tablet') {
-		padding: 0;
-		padding-top: 15px;
+		padding: 15px 0;
 	}
 	h2 {
 		margin-bottom: 0;
@@ -71,12 +70,6 @@
 		font-weight: 500px;
 		line-height: 1.3;
 		@include media('<desktop') {
-		font-size: 24px;
-		}
-		@include media('<tablet') {
-		font-size: 18px;
-		}
-		@include media('<phone') {
 		font-size: 24px;
 		}
 	}
