--- a/src/scss/pages/_engagements.scss
+++ b/src/scss/pages/_engagements.scss
@@ -19,17 +19,6 @@
 	}
 }
 
-.text-image-box {
-	&.reverse {
-		.text-holder {
-			order: 1;
-		}
-		.img-holder {
-			order: 2;
-		}
-	}
-}
-
 .section-element {
 	padding: 52px 0;
 	background-color: $gray-light-1;
@@ -63,6 +52,10 @@
 			}
 			.img-holder {
 				order: 2;
+				margin: 0 0 0 25px;
+				@include media('<tablet') {
+					margin: 0;
+				}
 			}
 		}
 	}
