--- a/src/scss/components/_product-popup.scss
+++ b/src/scss/components/_product-popup.scss
@@ -39,11 +39,11 @@
     		top: 15px;
     	}
 		&:before {
-			content: "x";
+			content: "\00d7";
 			position: absolute;
 			top: -3px;
 			right: 10px;
-			font-size: 40px;
+			font-size: 46px;
 			line-height: 1;
 		}
 		&:hover {
